# miteras-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  foo.js  test.js
.github/workflows/: build.yml  coverage.yml  nightly.yml  release.yml  stable.yml  test.yml
src/: api.rs  app.rs  cli.rs  config.rs  lib.rs  main.rs
tests/: clock_in.rs  clock_out.rs  help.rs  main.rs  version.rs
tests/files/: cico.html  login.html  passwordSetting.html
tests/templates/: cico.hbs  login.hbs
